--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LAZAREV. 🪀 — Digital Product Design Agency | Award Winning UX & UI Agency</title>
+    <link rel="shortcut icon" href="https://assets-global.website-files.com/64a2ab71942e1d57feb6fe39/6528221f95333ff155d01ad2_fav.gif" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
 </head>
+
 
 <body>
     <nav>
@@ -103,7 +108,7 @@
             <h1>AI & ML PR<span><svg class="c-bttn__morph" fill="none" viewBox="0 0 131 136">
                         <path class="g-path" data-morph="end" fill="#fff"
                             d="M48 77.457v7.224h7.224l21.307-21.306-7.224-7.225L48 77.457Zm34.118-19.67a1.919 1.919 0 0 0 0-2.716l-4.508-4.508a1.919 1.919 0 0 0-2.716 0l-3.526 3.526 7.224 7.224 3.526-3.525Z">
-                        </path> 
+                        </path>
                         <path class="g-path" data-morph="start" fill="#fff"
                             d="M48 77.457v7.224h7.224l21.307-21.306-7.224-7.225L48 77.457Zm34.118-19.67a1.919 1.919 0 0 0 0-2.716l-4.508-4.508a1.919 1.919 0 0 0-2.716 0l-3.526 3.526 7.224 7.224 3.526-3.525Z"
                             data-original="M65.72 109.14c10.08 0 17.76-3.78 23.04-11.34 5.4-7.68 8.1-17.64 8.1-29.88 0-12.24-2.7-22.2-8.1-29.88-5.28-7.68-12.96-11.52-23.04-11.52-9.96 0-17.7 3.84-23.22 11.52-5.4 7.68-8.1 17.64-8.1 29.88 0 12.12 2.7 22.02 8.1 29.7 5.52 7.68 13.26 11.52 23.22 11.52Zm46.08 7.02c-11.64 12.6-27.06 18.9-46.26 18.9s-34.62-6.3-46.26-18.9C7.76 103.56 2 87.48 2 67.92c0-19.56 5.76-35.64 17.28-48.24C30.92 7.08 46.34.78 65.54.78s34.62 6.3 46.26 18.9c11.64 12.6 17.46 28.68 17.46 48.24 0 19.56-5.82 35.64-17.46 48.24Z">
@@ -144,11 +149,334 @@
             </div>
         </div>
         <div id="page2">
+            <div id="page2-left">
+                <p>Exclusive insights into <br>UI/UX and product design</p>
+                <h5>Being a design studio at the forefront of digital transformation and product design, we take it upon
+                    ourselves to drop some knowledge, share insights, let out insider tips, and put our work on full
+                    display</h5>
+            </div>
+            <div id="page2-right">
+                <div class="right-elem" id="right-elem1">
+                    <h2>How to Design An AI InterFace Users will <br>Trust in 2024?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                        alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>How to Design An AI InterFace Users will <br>Trust in 2024?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                        alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>How to Design An AI InterFace Users will <br>Trust in 2024?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                        alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>How to Design An AI InterFace Users will <br>Trust in 2024?</h2>
+                    <img src="https://assets-global.website-files.com/64a5e6675a4159253d0ee3e0/65c5011d306a52274ebea027_cover.webp"
+                        alt="">
+                </div>
+            </div>
+        </div>
+        <div id="page3">
+            <video src="assets/lazarev-reel.mp4"></video>
+            <div class="page3-center">
+                <div class="icon">
+                    <i class="ri-play-fill"></i>
+                </div>
+                <h5>Watch Showreel</h5>
+            </div>
+        </div>
+        <div id="page4">
+            <div class="page4left">
+                <h1>Sucess Stories Shaped by our User Experience Design Agency</h1>
+            </div>
+            <div class="page4right">
+                <div class="p4right">
+                    <h1 class="same-same">Partnership Mentality</h1>
+                    <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab voluptatibus vero quisquam optio
+                        quas
+                        ad illo hic eveniet quod tempora iure eum, iste quia aliquam facere debitis saepe animi earum
+                        adipisci rerum eligendi recusandae aut! Eveniet aliquid temporibus harum eligendi, ipsam dicta
+                        dignissimos quibusdam iure voluptatibus quod sed quidem explicabo tempore ad deserunt dolor
+                        sapiente
+                        dolorem?</h2>
+                </div>
+                <div class="p4right">
+                    <h1 class="same-same">results</h1>
+                    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est deleniti itaque sint illum ipsum
+                        dolores, corporis cum unde qui maxime, porro molestias, quisquam doloremque fuga! Debitis, hic.
+                        Nisi
+                        sed minima cupiditate perspiciatis, esse in aspernatur!</h2>
+                </div>
+            </div>
+        </div>
+        <div id="page5">
+            <div class="beach">
+
+
+                <div class="box">
+                    <h1>$500M</h1>
+                    <h2>In funding secured owning to our designs</h2>
+                    <h6>/001</h6>
+                </div>
+
+                <div class="box">
+                    <h1>+1 million</h1>
+                    <h2>Increase in customer base </h2>
+                    <h6>/002</h6>
+                </div>
+
+                <div class="box">
+                    <h1>1 000 000 +</h1>
+                    <h2>of active marketplace users</h2>
+                    <h6>/003</h6>
+                </div>
+
+                <div class="box">
+                    <h1>25 million</h1>
+                    <h2>Monthly e-commerce visits</h2>
+                    <h6>/004</h6>
+                </div>
+
+                <div class="box">
+                    <h1>+300%</h1>
+                    <h2>Increase in sign-up conversion rate</h2>
+                    <h6>/005</h6>
+                </div>
+
+                <div class="box">
+                    <h1>+42%</h1>
+                    <h2>Increase in the app's retention rate</h2>
+                    <h6>/006</h6>
+                </div>
+
+            </div>
+
+        </div>
+        <div id="page5"></div>
+        <div id="page6">
+            <div class="section">
+                <div class="sec-left">
+                    <h2>Accern.Rhea </h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, adipisci qui consequatur totam
+                        magnam itaque ea quae nulla at. Exercitationem reiciendis blanditiis earum labore nemo. </p>
+                </div>
+                <div class="sec-right">
+                    <img src="assets/robot1cover.webp" alt="">
+                    <video muted src="assets/robot1.webm"></video>
+                </div>
+            </div>
+            <div class="section">
+                <div class="sec-left">
+                    <h2>Afro Tech </h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, adipisci qui consequatur totam
+                        magnam itaque ea quae nulla at. Exercitationem reiciendis blanditiis earum labore nemo. </p>
+                </div>
+                <div class="sec-right">
+                    <img src="assets/robot2cover.jpeg" alt="">
+                    <video muted src="assets/robot2.webm"></video>
+                </div>
+            </div>
+        </div>
+        <div id="page7">
+            <button>Become a Client </button>
+            <div class="page7-right">
+                <p><span></span>We lead your startup at every step of its <span></span>growth, providing unparalleled
+                    personal service at every interaction. Whether it's launching an MVP, revamping an existing product,
+                    securing funding with UI prototypes, increasing customer engagement, or boosting conversions, we
+                    develop a suite of custom-tailored design services to fulfill your expectations.</p>
+                <div class="page7content">
+                    <div class="uiux rotatekaro">
+                        <details>
+                            <summary>
+                                <div class="arrow">
+                                    <h1>UI/UX Design</h1>
+                                    <i class="ri-arrow-down-s-line"></i>
+                                </div>
+
+                                <div id="flex">
+                                    <h4>UX Audit</h4>
+                                    <h4>UI Design</h4>
+                                    <h4>UX Design</h4>
+                                    <h4>UX Research</h4>
+
+                                </div>
+                            </summary>
+
+                            <div class="page7container">
+                                <div class="page7-elem">
+                                    <div class="over7"></div>
+                                    <h3>UX Research</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+                                        consequatur
+                                        error, enim in iure distinctio, pariatur quibusdam nobis dolor laborum nulla
+                                        animi mollitia voluptas odit, praesentium magni. Exercitationem, tenetur?
+                                        Illum,
+                                        ducimus.</p>
+                                    <i class="ri-arrow-right-up-line"></i>
+                                </div>
+                                <div class="page7-elem">
+                                    <div class="over7"></div>
+                                    <h3>UX Design</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+                                        consequatur
+                                        error, enim in iure distinctio, pariatur quibusdam nobis dolor laborum nulla
+                                        animi mollitia voluptas odit, praesentium magni. Exercitationem, tenetur?
+                                        Illum,
+                                        ducimus.</p>
+                                    <i class="ri-arrow-right-up-line"></i>
+                                </div>
+                                <div class="page7-elem">
+                                    <div class="over7"></div>
+                                    <h3>UI Design</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+                                        consequatur
+                                        error, enim in iure distinctio, pariatur quibusdam nobis dolor laborum nulla
+                                        animi mollitia voluptas odit, praesentium magni. Exercitationem, tenetur?
+                                        Illum,
+                                        ducimus.</p>
+                                    <i class="ri-arrow-right-up-line"></i>
+                                </div>
+                                <div class="page7-elem">
+                                    <div class="over7"></div>
+                                    <h3>UX Audit</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
+                                        consequatur
+                                        error, enim in iure distinctio, pariatur quibusdam nobis dolor laborum nulla
+                                        animi mollitia voluptas odit, praesentium magni. Exercitationem, tenetur?
+                                        Illum,
+                                        ducimus.</p>
+                                    <i class="ri-arrow-right-up-line"></i>
+                                </div>
+
+
+                            </div>
+
+                        </details>
+                    </div>
+                    <div class="product">
+                        <details>
+                            <summary>
+                                <div class="arrow">
+                                    <h1>Product Design</h1>
+                                    <i class="ri-arrow-down-s-line"></i>
+                                </div>
+
+                                <div id="flex">
+                                    <h4>WEBSITE DESIGN</h4>
+                                    <h4>MOBILE APP</h4>
+                                    <h4>WEB APP </h4>
+                                    <h4>SAAS</h4>
+                                </div>
+                            </summary>
+                            <div class="page7container">
+                                <div class="page7-elem">
+                                    <div class="over7"></div>
+                                    <h3>UX Research</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus consequatur
+                                        error, enim in iure distinctio, pariatur quibusdam nobis dolor laborum nulla
+                                        animi mollitia voluptas odit, praesentium magni. Exercitationem, tenetur? Illum,
+                                        ducimus.</p>
+                                    <i class="ri-arrow-right-up-line"></i>
+                                </div>
+                                <div class="page7-elem">
+                                    <div class="over7"></div>
+                                    <h3>UX Design</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus consequatur
+                                        error, enim in iure distinctio, pariatur quibusdam nobis dolor laborum nulla
+                                        animi mollitia voluptas odit, praesentium magni. Exercitationem, tenetur? Illum,
+                                        ducimus.</p>
+                                    <i class="ri-arrow-right-up-line"></i>
+                                </div>
+                                <div class="page7-elem">
+                                    <div class="over7"></div>
+                                    <h3>UI Design</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus consequatur
+                                        error, enim in iure distinctio, pariatur quibusdam nobis dolor laborum nulla
+                                        animi mollitia voluptas odit, praesentium magni. Exercitationem, tenetur? Illum,
+                                        ducimus.</p>
+                                    <i class="ri-arrow-right-up-line"></i>
+                                </div>
+                                <div class="page7-elem">
+                                    <div class="over7"></div>
+                                    <h3>UX Audit</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus consequatur
+                                        error, enim in iure distinctio, pariatur quibusdam nobis dolor laborum nulla
+                                        animi mollitia voluptas odit, praesentium magni. Exercitationem, tenetur? Illum,
+                                        ducimus.</p>
+                                    <i class="ri-arrow-right-up-line"></i>
+                                </div>
+
+
+                            </div>
+                        </details>
+
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="page8">
+            <h1>Digital Product Design Process</h1>
+            <div class="page8content">
+                <div class="blue-btn">
+                    <h4>See All Case Studies <i class="ri-arrow-right-up-line"></i></h4>
+                    <h4>See All Case Studies <i class="ri-arrow-right-up-line"></i></h4>
+                </div>
+                <!-- <button>See All Case Studies</button> -->
+                <div class="right8">
+                    <p>We do not take on projects that involve blind conformity or designing out of context. We won't
+                        settle for a user interface design that is misaligned with your product and digital strategy.
+                        Neither will we launch web development ventures without user testing to validate our design
+                        solutions.</p>
+                    <p>Instead, we create scalable digital products that meet the ever-evolving demands of our
+                        customers, ensuring long-term sustainability.</p>
+                </div>
+            </div>
+            <div class="page8bottom" class="btm8-parts">
+                <div id="bottom8part1"></div>
+                <div id="bottom8part2" class="btm8-parts">
+                    <h5>Product Strategy</h5>
+                    <h4><span>1</span>Strategy Workshop</h4>
+                    <h4><span>2</span>Idea Validation</h4>
+                    <h4><span>3</span>Market Research</h4>
+                    <h4><span>4</span>Product Positioning</h4>
+                    <h4><span>5</span>UX Research</h4>
+                    <h4><span>6</span>Functional Decomposition</h4>
+                </div>
+                <div id="btm8-part3" class="btm8-parts">
+                    <h5>UX Design</h5>
+                    <h4><span>1</span>Strategy </h4>
+                    <h4><span>2</span>Idea </h4>
+
+                </div>
+                <div id="btm8-part4" class="btm8-parts">
+                    <h5>UI Design</h5>
+                    <h4><span>1</span>Strategy</h4>
+                    <h4><span>2</span>Idea </h4>
+                    <h4><span>3</span>Market </h4>
+                </div>
+                <div id="btm8-part5" class="btm8-parts">
+                    <h5>Delivery</h5>
+
+                </div>
+            </div>
+        </div>
+        <div class="page9">
 
         </div>
     </div>
+    <!-- locomotive cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <!-- gsap cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- ScrollTrigger cdn  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
+        integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
